Fix crash when a glob file refers to a mimetype that doesn't exist anymore.

This made KMimeType::findByUrl return NULL, which is never supposed to happen.
FIXED-IN: 4.6.1
BUG: 265188